Update: elasticsearch values and PVC config

--- a/task-1/step2/pvc.yml
+++ b/task-1/step2/pvc.yml
@@ -15,7 +15,7 @@ spec:
   volumeMode: Filesystem
 ---
 apiVersion: v1
-kind: PersisterntVolume
+kind: PersistentVolume
 metadata:
   name: pv-quickstart-data-0
 spec:
