Update: elasticsearch.yml 註解與配置調整

--- a/task-1/step2/elasticsearch.yml
+++ b/task-1/step2/elasticsearch.yml
@@ -25,6 +25,13 @@ spec:
     count: 1
     config:
       node.roles: ["data", "ingest", "ml"]
+      # 指定此 nodeSet 的 Pod 只會被排程到指定的節點（node-data-5361855-iaas.novalocal）
+      # 這樣可以確保 data-node 只會在特定主機上運行，通常用於本地存儲或特殊硬體需求
+      # nodeSelector 需與 PV 的 nodeAffinity 設定一致，才能正確綁定 PVC
+    podTemplate:
+      spec:
+        nodeSelector:
+          kubernetes.io/hostname: node-data-5361855-iaas.novalocal  # change here
     volumeClaimTemplates:
     - metadata:
         name: elasticsearch-data
