Update: README and configs for multiple-node1.0

--- a/task-1/step2/pvc.yml
+++ b/task-1/step2/pvc.yml
@@ -13,6 +13,9 @@ spec:
     path: /home/ubuntu/ELK-stack-multiple-node/task-1/step2/pvc-master/
   persistentVolumeReclaimPolicy: Retain
   volumeMode: Filesystem
+  claimRef:
+    name: elasticsearch-data-quickstart-es-master-node-0
+    namespace: default
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -36,3 +39,6 @@ spec:
           operator: In
           values:
           - node-data-5361855-iaas.novalocal # change here
+  claimRef:
+    name: elasticsearch-data-quickstart-es-data-node-0
+    namespace: default
