Update: README 說明 data node hostname 配置

--- a/task-1/step2/elasticsearch.yml
+++ b/task-1/step2/elasticsearch.yml
@@ -31,7 +31,7 @@ spec:
     podTemplate:
       spec:
         nodeSelector:
-          kubernetes.io/hostname: node-data-5361855-iaas.novalocal  # change here
+          kubernetes.io/hostname: data node name  # change here   ✅正確的 data node hostname
     volumeClaimTemplates:
     - metadata:
         name: elasticsearch-data
