--- a/task-1/step2/elasticsearch.yml
+++ b/task-1/step2/elasticsearch.yml
@@ -31,7 +31,18 @@ spec:
     podTemplate:
       spec:
         nodeSelector:
-          kubernetes.io/hostname: data node name  # change here   ✅正確的 data node hostname
+          kubernetes.io/hostname: data node name  # change here
+        securityContext:  # 設定 Pod 的安全上下文
+          runAsUser: 1000
+          runAsGroup: 1000
+          fsGroup: 1000
+        initContainers:
+        - name: fix-permissions
+          image: busybox
+          command: ["sh", "-c", "chown -R 1000:1000 /usr/share/elasticsearch/data"]
+          volumeMounts:
+          - name: elasticsearch-data
+            mountPath: /usr/share/elasticsearch/data  # 挂载数据卷到容器内
     volumeClaimTemplates:
     - metadata:
         name: elasticsearch-data
