Update: PVC/ELK配置修正 for multiple-node1.2

--- a/task-1/step2/elasticsearch.yml
+++ b/task-1/step2/elasticsearch.yml
@@ -10,6 +10,9 @@ spec:
     count: 1
     config:
       node.roles: ["master"]
+      cluster.name: "quickstart"
+      discovery.seed_hosts: ["quickstart-es-master-node-0"]
+      cluster.initial_master_nodes: ["quickstart-es-master-node-0"]
     volumeClaimTemplates:
       - metadata:
           name: elasticsearch-data
@@ -25,6 +28,8 @@ spec:
     count: 1
     config:
       node.roles: ["data", "ingest", "ml"]
+      cluster.name: "quickstart"  # 集群名稱
+      discovery.seed_hosts: ["quickstart-es-master-node-0"] # 用於發現 master 節點
       # 指定此 nodeSet 的 Pod 只會被排程到指定的節點（node-data-5361855-iaas.novalocal）
       # 這樣可以確保 data-node 只會在特定主機上運行，通常用於本地存儲或特殊硬體需求
       # nodeSelector 需與 PV 的 nodeAffinity 設定一致，才能正確綁定 PVC
