--- a/task-1/step2/pvc.yml
+++ b/task-1/step2/pvc.yml
@@ -13,6 +13,9 @@ spec:
     path: /home/ubuntu/ELK-stack-multiple-node/task-1/step2/pvc-master/
   persistentVolumeReclaimPolicy: Retain
   volumeMode: Filesystem
+  claimRef:
+    name: elasticsearch-data-quickstart-es-master-node-0
+    namespace: default
   
 ---
 apiVersion: v1
@@ -29,7 +32,6 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   local:
     path: /home/ubuntu/ELK-stack-multiple-node/task-1/step2/pvc-data/
-    type: DirectoryOrCreate
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -38,3 +40,6 @@ spec:
           operator: In
           values:
           - data node name # change here   ✅正確的 data node hostname
+  claimRef:
+    name: elasticsearch-data-quickstart-es-data-node-0
+    namespace: default
