--- a/task-1/step2/elasticsearch.yml
+++ b/task-1/step2/elasticsearch.yml
@@ -7,7 +7,7 @@ spec:
   version: 8.16.1
   nodeSets:
   - name: master-node
-    count: 1
+    count: 3
     config:
       node.roles: ["master"]
       cluster.name: "quickstart"
@@ -26,9 +26,9 @@ spec:
           storageClassName: standard
 
   - name: data-node
-    count: 1
+    count: 3
     config:
-      node.roles: ["data"]
+      node.roles: ["data" , "ingest" , "ml"]
       cluster.name: "quickstart"  # 集群名稱
       discovery.seed_hosts: ["quickstart-es-master-node"]
       cluster.initial_master_nodes: ["quickstart-es-master-node-0"] # 用於發現 master 節點
