--- a/task-1/step2/pvc.yml
+++ b/task-1/step2/pvc.yml
@@ -20,7 +20,8 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - master node name # change here   ✅正確的 master node hostname
+          - master node name 
+          # change here   ✅正確的 master node hostname
   claimRef:
     name: elasticsearch-data-quickstart-es-master-node-0
     namespace: default
@@ -47,7 +48,8 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - master node name # change here   ✅正確的 master node hostname
+          - master node name 
+          # change here   ✅正確的 master node hostname
   claimRef:
     name: elasticsearch-data-quickstart-es-master-node-1
     namespace: default
@@ -74,7 +76,8 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - master node name # change here   ✅正確的 master node hostname
+          - master node name 
+          # change here   ✅正確的 master node hostname
   claimRef:
     name: elasticsearch-data-quickstart-es-master-node-2
     namespace: default
@@ -101,10 +104,9 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - data node name # change here   ✅正確的 data node hostname
-  claimRef:
-    name: elasticsearch-data-quickstart-es-data-node-0
-    namespace: default
+          - data node name 
+          # change here   ✅正確的 data node hostname
+
 
 ---
 apiVersion: v1
@@ -128,10 +130,9 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - data node name # change here   ✅正確的 data node hostname
-  claimRef:
-    name: elasticsearch-data-quickstart-es-data-node-1
-    namespace: default
+          - data node name 
+          # change here   ✅正確的 data node hostname
+
 
 ---
 apiVersion: v1
@@ -155,7 +156,5 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - data node name # change here   ✅正確的 data node hostname
-  claimRef:
-    name: elasticsearch-data-quickstart-es-data-node-2
-    namespace: default
+          - data node name 
+          # change here   ✅正確的 data node hostname
