--- a/task-1/step2/elasticsearch.yml
+++ b/task-1/step2/elasticsearch.yml
@@ -40,6 +40,57 @@ spec:
             storage: 1000Gi
         storageClassName: standard
 
+
+---
+apiVersion: elasticsearch.k8s.elastic.co/v1
+kind: Elasticsearch
+metadata:
+  name: quickstart
+spec:
+  version: 8.16.1
+  nodeSets:
+  - name: master-nodes
+    count: 1
+    config:
+      node.roles: ["master"]
+    volumeClaimTemplates:
+    - metadata:
+        name: elasticsearch-data
+      spec:
+        accessModes:
+        - ReadWriteOnce
+        resources:
+          requests:
+            storage: 10Gi
+        storageClassName: standard
+
+# ---
+# apiVersion: elasticsearch.k8s.elastic.co/v1
+# kind: Elasticsearch
+# metadata:
+#   name: quickstart
+# spec:
+#   version: 8.16.1
+#   nodeSets:
+#   - name: master-node
+#     count: 3
+#     config:
+#       node.roles: ["master"]
+#       cluster.name: "quickstart"
+#       # 這裡用 headless service 名稱，不用帶 pod 名稱
+#       discovery.seed_hosts: ["quickstart-es-master-node"]
+#       cluster.initial_master_nodes: ["quickstart-es-master-node-0"]
+#     volumeClaimTemplates:
+#       - metadata:
+#           name: elasticsearch-data
+#         spec:
+#           accessModes:
+#             - ReadWriteOnce
+#           resources:
+#             requests:
+#               storage: 10Gi
+#           storageClassName: standard
+
   # - name: data-node
   #   count: 3
   #   config:
