--- a/task-1/step2/elasticsearch.yml
+++ b/task-1/step2/elasticsearch.yml
@@ -41,28 +41,28 @@ spec:
         storageClassName: standard
 
 
----
-apiVersion: elasticsearch.k8s.elastic.co/v1
-kind: Elasticsearch
-metadata:
-  name: quickstart
-spec:
-  version: 8.16.1
-  nodeSets:
-  - name: master-nodes
-    count: 1
-    config:
-      node.roles: ["master"]
-    volumeClaimTemplates:
-    - metadata:
-        name: elasticsearch-data
-      spec:
-        accessModes:
-        - ReadWriteOnce
-        resources:
-          requests:
-            storage: 10Gi
-        storageClassName: standard
+# ---
+# apiVersion: elasticsearch.k8s.elastic.co/v1
+# kind: Elasticsearch
+# metadata:
+#   name: quickstart
+# spec:
+#   version: 8.16.1
+#   nodeSets:
+#   - name: master-nodes
+#     count: 1
+#     config:
+#       node.roles: ["master"]
+#     volumeClaimTemplates:
+#     - metadata:
+#         name: elasticsearch-data
+#       spec:
+#         accessModes:
+#         - ReadWriteOnce
+#         resources:
+#           requests:
+#             storage: 10Gi
+#         storageClassName: standard
 
 # ---
 # apiVersion: elasticsearch.k8s.elastic.co/v1
