--- a/task-1/step1/logstash.yml
+++ b/task-1/step1/logstash.yml
@@ -1,13 +1,85 @@
 apiVersion: logstash.k8s.elastic.co/v1
-kind: Logstash
+kind: Logstash 
 metadata:
-  name: quickstart
+  name: ls-quickstart
+  namespace: default
 spec:
   version: 8.16.1
   count: 3
+
+  # configRef:
+  #   secretName: logstash-config
+  # pipelinesRef:
+  #   secretName: logstash-pipelines
+
   elasticsearchRef:
     name: quickstart
     clusterName: quickstart
+    # clusterName: es-default   
+
+  services:
+    - name: beats
+      service:
+        spec:
+          type: ClusterIP
+          ports:
+            - port: 5044
+              name: "filebeat"
+              protocol: TCP
+          # selector: {}
+
+   # 自訂 Pod（掛 env、volume、mount）
+  # podTemplate:
+  #   spec:
+  #     containers:
+  #       - name: logstash
+  #         env:
+  #           - name: ES_URL
+  #             valueFrom:
+  #               secretKeyRef:
+  #                 name: logstash-es-creds
+  #                 key: ES_URL
+  #           - name: ES_USERNAME
+  #             valueFrom:
+  #               secretKeyRef:
+  #                 name: logstash-es-creds
+  #                 key: ES_USERNAME
+  #           - name: ES_PASSWORD
+  #             valueFrom:
+  #               secretKeyRef:
+  #                 name: logstash-es-creds
+  #                 key: ES_PASSWORD
+  #         volumeMounts:
+  #           - name: pipeline-files
+  #             mountPath: /usr/share/logstash/pipeline
+  #           - name: ca
+  #             mountPath: /usr/share/logstash/config/certs
+  #             readOnly: true
+  
+  podTemplate:
+    spec:
+      containers:
+        - name: logstash
+          env:
+            - name: ES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: logstash-es-creds
+                  key: ES_PASSWORD
+          volumeMounts:
+            - name: ca
+              mountPath: /usr/share/logstash/config/certs
+              readOnly: true
+            - name: pipeline-files
+              mountPath: /usr/share/logstash/pipeline
+      volumes:
+        - name: ca
+          secret:
+            secretName: logstash-ca
+        - name: pipeline-files
+          configMap:
+            name: logstash-pipeline-files
+
   config:
     log.level: info
     path.config: /usr/share/logstash/pipeline
@@ -34,33 +106,16 @@ spec:
             cacert => "/usr/share/logstash/config/certs/ca.crt"
           }
         }
-  podTemplate:
-    spec:
-      containers:
-        - name: logstash
-          volumeMounts:
-            - name: certs
-              mountPath: /usr/share/logstash/config/certs
-          env:
-            - name: ES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: logstash-es-creds
-                  key: ES_PASSWORD
-      volumes:
-        - name: certs
-          secret:
-            secretName: quickstart-es-http-certs-public
-  services:
-    - name: beats
-      service:
-        spec:
-          type: NodePort
-          ports:
-            - port: 5044
-              name: "filebeat"
-              protocol: TCP
-              targetPort: 5044
+  
+---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: quickstart-config
+# stringData:
+#   logstash.yml: |-
+#     pipeline.workers: 4
+#     log.level: debug
 
 
 
@@ -74,3 +129,20 @@ spec:
 #   hosts: ["logstash1:5044", "logstash2:5044", "logstash3:5044"]
 #   loadbalance: true
 
+#  podTemplate:
+#     spec:
+#       containers:
+#         - name: logstash
+#           volumeMounts:
+#             - name: certs
+#               mountPath: /usr/share/logstash/config/certs
+#           env:
+#             - name: ES_PASSWORD
+#               valueFrom:
+#                 secretKeyRef:
+#                   name: logstash-es-creds
+#                   key: ES_PASSWORD
+#       volumes:
+#         - name: certs
+#           secret:
+#             secretName: quickstart-es-http-certs-public
