Update: logstash.yml apiVersion to v1alpha1 and related changes for load test branch

--- a/task-1/step1/logstash.yml
+++ b/task-1/step1/logstash.yml
@@ -1,4 +1,4 @@
-apiVersion: logstash.k8s.elastic.co/v1
+apiVersion: logstash.k8s.elastic.co/v1alpha1
 kind: Logstash 
 metadata:
   name: ls-quickstart
