Update: .ssh/config and related files for load test branch

--- a/task-1/step1/logstash.yml
+++ b/task-1/step1/logstash.yml
@@ -12,9 +12,10 @@ spec:
   # pipelinesRef:
   #   secretName: logstash-pipelines
 
-  elasticsearchRef:
-    name: quickstart
-    clusterName: quickstart
+  elasticsearchRefs:
+    - name: quickstart
+      namespace: default
+      clusterName: es-default
     # clusterName: es-default   
 
   services:
