Update: Secret.yml base64 password for load test branch

--- a/task-1/step1/logstash.yml
+++ b/task-1/step1/logstash.yml
@@ -37,7 +37,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: quickstart-ls-default-quickstart-logstash-user
-                  key: ES_PASSWORD
+                  key: elastic
           volumeMounts:
             - name: elasticsearch-certs
               mountPath: /usr/share/logstash/config/certs
