Update: logstash.yml and related files for load-test1.0 branch

--- a/task-1/step1/Secret.yml
+++ b/task-1/step1/Secret.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  ES_PASSWORD: <你的base64編碼密碼>
+  ES_PASSWORD: 你的base64編碼密碼
 
 # apiVersion: v1
 # kind: Secret
