--- a/task-1/step1/test-logstash.yml
+++ b/task-1/step1/test-logstash.yml
@@ -1,5 +1,5 @@
 apiVersion: logstash.k8s.elastic.co/v1alpha1
-kind: Logstash 
+kind: Logstash
 metadata:
   name: quickstart
 spec:
@@ -22,7 +22,6 @@ spec:
 
   config:
     log.level: info
-    path.config: /usr/share/logstash/pipeline
     queue.type: persisted # Enable persistent queue to handle backpressure
     # queue.type: memory
     queue.max_bytes: 4gb # Increase queue size for high throughput
@@ -47,34 +46,28 @@ spec:
           elasticsearch {
             hosts => ["${QS_ES_HOSTS}"]
             index => "logstash-%{+YYYY.MM.dd}"
-            user => "elastic"
+            user => "${QS_ES_USER}"
             password => "${QS_ES_PASSWORD}"
             cacert => "${QS_ES_SSL_CERTIFICATE_AUTHORITY}"
           }
         }
-  
-
-
-# podTemplate:
-#     spec:
-#       containers:
-#         - name: logstash
-#           env:
-#             - name: ES_PASSWORD
-#               valueFrom:
-#                 secretKeyRef:
-#                   name: quickstart-es-elastic-user
-#                   key: elastic
-#           volumeMounts:
-#             - name: elasticsearch-certs
-#               mountPath: /usr/share/logstash/config/certs
-#               readOnly: true
-#             - name: pipeline-files
-#               mountPath: /usr/share/logstash/pipeline
-#       volumes:
-#         - name: elasticsearch-certs
-#           secret:
-#             secretName: quickstart-ls-logstash-es-default-quickstart-ca
-#         - name: pipeline-files
-#           configMap:
-#             name: logstash-pipeline-files
+  podTemplate:
+  metadata:
+    labels:
+      app: logstash
+    annotations:
+      prometheus.io/scrape: "true" # Enable Prometheus scraping
+      prometheus.io/port: "9600" # Logstash monitoring port
+  spec:
+    containers:
+      - name: logstash
+        resources:
+          requests:
+            cpu: "1" # 2 CPU cores for stress testing
+            memory: "4Gi" # 4GB memory
+          limits:
+            cpu: "2" # Allow up to 4 CPU cores
+            memory: "8Gi" # Allow up to 8GB memory
+        env:
+          - name: JAVA_OPTS
+            value: "-Xms2g -Xmx4g" # JVM heap settings for high throughput
