Update logstash.yml: Fix pod template indentation and add environment variables for 3 VM stress test

--- a/task-1/step1/logstash.yml
+++ b/task-1/step1/logstash.yml
@@ -48,35 +48,47 @@ spec:
         }
         output {
           elasticsearch {
-            hosts => ["https://quickstart-es-http.default.svc:9200"]
+            hosts => ["${QS_ES_HOSTS}"]
             index => "logstash-%{+YYYY.MM.dd}"
-            user => "elastic"
-            password => "${ES_PASSWORD}"
-            ssl => true
-            cacert => "/usr/share/logstash/config/certs/ca.crt"
+            user => "${QS_ES_USER}"
+            password => "${QS_ES_PASSWORD}"
+            cacert => "${QS_ES_SSL_CERTIFICATE_AUTHORITY}"
           }
         }
 
   podTemplate:
-  metadata:
-    labels:
-      app: logstash
-    annotations:
-      prometheus.io/scrape: "true" # Enable Prometheus scraping
-      prometheus.io/port: "9600" # Logstash monitoring port
-  spec:
-    containers:
-      - name: logstash
-        resources:
-          requests:
-            cpu: "1" # 2 CPU cores for stress testing
-            memory: "4Gi" # 4GB memory
-          limits:
-            cpu: "2" # Allow up to 4 CPU cores
-            memory: "8Gi" # Allow up to 8GB memory
-        env:
-          - name: JAVA_OPTS
-            value: "-Xms2g -Xmx4g" # JVM heap settings for high throughput
+    metadata:
+      labels:
+        app: logstash
+      annotations:
+        prometheus.io/scrape: "true" # Enable Prometheus scraping
+        prometheus.io/port: "9600" # Logstash monitoring port
+    spec:
+      containers:
+        - name: logstash
+          resources:
+            requests:
+              cpu: "1" # 2 CPU cores for stress testing
+              memory: "4Gi" # 4GB memory
+            limits:
+              cpu: "2" # Allow up to 4 CPU cores
+              memory: "8Gi" # Allow up to 8GB memory
+          env:
+            - name: JAVA_OPTS
+              value: "-Xms2g -Xmx4g" # JVM heap settings for high throughput
+            - name: ES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: quickstart-es-elastic-user
+                  key: elastic
+          volumeMounts:
+            - name: elasticsearch-certs
+              mountPath: /usr/share/logstash/config/certs
+              readOnly: true
+      volumes:
+        - name: elasticsearch-certs
+          secret:
+            secretName: quickstart-ls-logstash-es-default-quickstart-ca
   
 
 
@@ -179,3 +191,13 @@ spec:
 #           }
 #         }                                                                          1,11          Top
 
+# output {
+#           elasticsearch {
+#             hosts => ["https://quickstart-es-http.default.svc:9200"]
+#             index => "logstash-%{+YYYY.MM.dd}"
+#             user => "elastic"
+#             password => "${ES_PASSWORD}"
+#             ssl => true
+#             cacert => "/usr/share/logstash/config/certs/ca.crt"
+#           }
+#         }
