Add ELK-roles and stress test configurations
- Add ELK-roles with elasticsearch, kibana, logstash, and pvc configurations
- Add multiple stress test logstash configurations (test-logstash1-5.yml)
- Update main logstash.yml for 3 VM stress test deployment
- Organize stress test files in sterss-test directory

--- a/task-1/step1/logstash.yml
+++ b/task-1/step1/logstash.yml
@@ -1,7 +1,7 @@
 apiVersion: logstash.k8s.elastic.co/v1alpha1
 kind: Logstash 
 metadata:
-  name: quickstart-ls
+  name: quickstart
   namespace: default
 spec:
   version: 8.19.2
