你的更新說明

--- a/ansible/inventories/hosts.ini
+++ b/ansible/inventories/hosts.ini
@@ -1,7 +1,10 @@
 [all]
-192.168.211.46
-192.168.211.56
-192.168.211.1
+192.168.211.    ;master node or Jump , 跳板機或主節點為第一個
+192.168.211.    ; worker node 
+192.168.211.    ; worker node 
+
+
+
 ; [k3s_server]
 ; 192.168.211.
 ; 192.168.211.
