--- a/ansible/playbooks/install_k3s0.yaml
+++ b/ansible/playbooks/install_k3s0.yaml
@@ -14,7 +14,7 @@
       ignore_errors: yes
 
     - name: Install k3s using official script
-      shell: curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san {{ ansible_host }}" sh - 
+      shell: curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san {{ ansible_host }} --node-name k3s-master" sh -
       args:
         creates: /usr/local/bin/k3s
 
@@ -172,9 +172,11 @@
 
     - name: Install k3s agent using official script
       shell: |
-        curl -sfL https://get.k3s.io | K3S_URL="https://{{ k3s_server }}:6443" K3S_TOKEN="{{ k3s_token }}" K3S_NODE_NAME=VM{{ ansible_play_hosts.index(inventory_hostname) }} sh -
+        curl -sfL https://get.k3s.io | K3S_URL="https://{{ k3s_server }}:6443" K3S_TOKEN="{{ k3s_token }}" K3S_NODE_NAME={{ node_name }} sh -
       args:
         creates: /usr/local/bin/k3s
+      vars:
+        node_name: "{{ 'vm1' if ansible_play_hosts.index(inventory_hostname) == 1 else 'vm0' }}"
 
     - name: Debug k3s agent IP  
       debug:
